Remove some more obsolete suites
Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>